--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,7 @@
   padding: 0px 100px;
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,6 +32,10 @@ color: red;
 }
 .green{
 color: green;
+}
+h1{
+  margin-top: 0px;
+  padding-top: 20px;
 }
 
 
