--- a/src/components/App.css
+++ b/src/components/App.css
@@ -14,28 +14,36 @@
 }
 
 .App-container {
-  padding: 0px 100px;
+  padding: 0px 20px;
   background-color: #282c34;
   min-height: 100vh;
   text-align: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.viewContainer {
+  display: flex;
+}
+
 audio{
  width: 200px; 
 }
 table th, table td{
   text-align: left !important;
 }
-.red{
+.FLAGGED{
 color: red;
 }
-.green{
+.OK{
 color: green;
 }
 h1{
   margin-top: 0px;
   padding-top: 20px;
+}
+.bell{
+  cursor: pointer;
 }
 
 
